@@ -17,6 +17,8 @@ qodem (1.0.0-1) unstable; urgency=low
   * --xterm command line option: suppresses the terminal mode banner
     and status line, disables phonebook and serial port, and
     immediately launches a shell.  When the shell exits, Qodem exits.
+  * --geometry command line option
+  * X11/Win32: Shift/Ctrl-Ins pastes from system clipboard
 
  -- Kevin Lamonte <lamonte@users.sourceforge.net>  Mon,  4 Jul 2016 18:50:00 -0500
 
